@@ -2,13 +2,13 @@ package sirttas.elementalcraft.block.shrine.firepylon;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
-import net.minecraft.entity.LivingEntity;
-import net.minecraft.potion.Effects;
-import net.minecraft.tileentity.TileEntityType;
-import net.minecraft.util.DamageSource;
-import net.minecraft.util.Direction;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.world.damagesource.DamageSource;
+import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.level.block.entity.BlockEntityType;
+import net.minecraft.world.level.block.state.BlockState;
 import net.minecraftforge.registries.ObjectHolder;
 import sirttas.elementalcraft.api.ElementalCraftApi;
 import sirttas.elementalcraft.api.element.ElementType;
@@ -21,23 +21,23 @@ import sirttas.elementalcraft.infusion.tool.ToolInfusionHelper;
 
 public class FirePylonBlockEntity extends AbstractShrineBlockEntity {
 
-	@ObjectHolder(ElementalCraftApi.MODID + ":" + FirePylonBlock.NAME) public static final TileEntityType<FirePylonBlockEntity> TYPE = null;
+	@ObjectHolder(ElementalCraftApi.MODID + ":" + FirePylonBlock.NAME) public static final BlockEntityType<FirePylonBlockEntity> TYPE = null;
 
 	private static final Properties PROPERTIES = Properties.create(ElementType.FIRE).consumeAmount(ECConfig.COMMON.firePylonConsumeAmount.get()).range(ECConfig.COMMON.firePylonRange.get());
 
-	protected static final List<Direction> UPGRRADE_DIRECTIONS = ImmutableList.of(Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST);
+	protected static final List<Direction> UPGRRADE_DIRECTIONS = List.of(Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST);
 
-	public FirePylonBlockEntity() {
-		super(TYPE, PROPERTIES);
+	public FirePylonBlockEntity(BlockPos pos, BlockState state) {
+		super(TYPE, pos, state, PROPERTIES);
 	}
 
 	private List<LivingEntity> getEntities() {
-		return this.getLevel().getEntitiesOfClass(LivingEntity.class, getRangeBoundingBox(), e -> !e.isSpectator() && !e.hasEffect(Effects.FIRE_RESISTANCE) && !e.isOnFire()
-				&& !ToolInfusionHelper.hasFireInfusion(e) && (!this.hasUpgrade(ShrineUpgrades.PROTECTION) || EntityHelper.isHostile(e)));
+		return this.getLevel().getEntitiesOfClass(LivingEntity.class, getRangeBoundingBox(), e -> !e.isSpectator() && !e.hasEffect(MobEffects.FIRE_RESISTANCE) && !e.isOnFire()
+				&& !ToolInfusionHelper.hasFireInfusion(e) && (!this.hasUpgrade(ShrineUpgrades.PROTECTION.get()) || EntityHelper.isHostile(e)));
 	}
 	
 	@Override
-	protected boolean doTick() {
+	protected boolean doPeriode() {
 		int consumeAmount = this.getConsumeAmount();
 		float strength = this.getMultiplier(BonusType.STRENGTH);
 
