@@ -4,21 +4,19 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.IntStream;
 
-import com.google.common.collect.ImmutableList;
-
-import net.minecraft.block.Block;
-import net.minecraft.block.BlockState;
-import net.minecraft.block.CropsBlock;
-import net.minecraft.item.BlockItem;
-import net.minecraft.item.DirectionalPlaceContext;
-import net.minecraft.item.Item;
-import net.minecraft.item.ItemStack;
-import net.minecraft.tileentity.TileEntityType;
-import net.minecraft.util.Direction;
-import net.minecraft.util.IItemProvider;
-import net.minecraft.util.math.AxisAlignedBB;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.world.server.ServerWorld;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Direction;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.item.BlockItem;
+import net.minecraft.world.item.Item;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.context.DirectionalPlaceContext;
+import net.minecraft.world.level.ItemLike;
+import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.CropBlock;
+import net.minecraft.world.level.block.entity.BlockEntityType;
+import net.minecraft.world.level.block.state.BlockState;
+import net.minecraft.world.phys.AABB;
 import net.minecraftforge.registries.ObjectHolder;
 import sirttas.elementalcraft.api.ElementalCraftApi;
 import sirttas.elementalcraft.api.element.ElementType;
@@ -29,15 +27,15 @@ import sirttas.elementalcraft.loot.LootHelper;
 
 public class HarvestShrineBlockEntity extends AbstractShrineBlockEntity {
 
-	@ObjectHolder(ElementalCraftApi.MODID + ":" + HarvestShrineBlock.NAME) public static final TileEntityType<HarvestShrineBlockEntity> TYPE = null;
+	@ObjectHolder(ElementalCraftApi.MODID + ":" + HarvestShrineBlock.NAME) public static final BlockEntityType<HarvestShrineBlockEntity> TYPE = null;
 
 	private static final Properties PROPERTIES = Properties.create(ElementType.EARTH).periode(ECConfig.COMMON.harvestShrinePeriode.get())
 			.consumeAmount(ECConfig.COMMON.harvestShrineConsumeAmount.get()).range(ECConfig.COMMON.harvestShrineRange.get());
 
-	protected static final List<Direction> UPGRRADE_DIRECTIONS = ImmutableList.of(Direction.DOWN, Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST);
+	protected static final List<Direction> UPGRRADE_DIRECTIONS = List.of(Direction.DOWN, Direction.NORTH, Direction.SOUTH, Direction.WEST, Direction.EAST);
 
-	public HarvestShrineBlockEntity() {
-		super(TYPE, PROPERTIES);
+	public HarvestShrineBlockEntity(BlockPos pos, BlockState state) {
+		super(TYPE, pos, state, PROPERTIES);
 	}
 
 	private Optional<BlockPos> findCrop() {
@@ -49,14 +47,14 @@ public class HarvestShrineBlockEntity extends AbstractShrineBlockEntity {
 					BlockState blockstate = level.getBlockState(p);
 					Block block = blockstate.getBlock();
 
-					return block instanceof CropsBlock && ((CropsBlock) block).isMaxAge(blockstate);
+					return block instanceof CropBlock && ((CropBlock) block).isMaxAge(blockstate);
 				}).findAny();
 	}
 
-	private void handlePlanting(BlockPos pos, IItemProvider provider, List<ItemStack> loots) {
+	private void handlePlanting(BlockPos pos, ItemLike provider, List<ItemStack> loots) {
 		Item item = provider.asItem();
 
-		if (this.hasUpgrade(ShrineUpgrades.PLANTING)) {
+		if (this.hasUpgrade(ShrineUpgrades.PLANTING.get())) {
 			loots.stream().filter(stack -> stack.getItem().equals(item)).findFirst().ifPresent(seeds -> {
 				if (item instanceof BlockItem && ((BlockItem) item).place(new DirectionalPlaceContext(this.level, pos, Direction.DOWN, seeds, Direction.UP)).consumesAction()) {
 					seeds.shrink(1);
@@ -69,18 +67,18 @@ public class HarvestShrineBlockEntity extends AbstractShrineBlockEntity {
 	}
 
 	@Override
-	public AxisAlignedBB getRangeBoundingBox() {
+	public AABB getRangeBoundingBox() {
 		int range = getIntegerRange();
 
-		return new AxisAlignedBB(this.getBlockPos()).inflate(range, 0, range).expandTowards(0, -2, 0).move(0, -1, 0);
+		return new AABB(this.getBlockPos()).inflate(range, 0, range).expandTowards(0, -2, 0).move(0, -1, 0);
 	}
 
 
 	@Override
-	protected boolean doTick() {
-		if (level instanceof ServerWorld && !level.isClientSide) {
+	protected boolean doPeriode() {
+		if (level instanceof ServerLevel && !level.isClientSide) {
 			return findCrop().map(p -> {
-				List<ItemStack> loots = LootHelper.getDrops((ServerWorld) level, p);
+				List<ItemStack> loots = LootHelper.getDrops((ServerLevel) level, p);
 				Block block = level.getBlockState(p).getBlock();
 
 				level.destroyBlock(p, false);
